--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,6 @@
         "psr-4": {
             "Dev\\Academy\\": "includes/"
         },
-        "files" : []
+        "files" : ["includes/functions.php"]
     }
 }
